--- a/OurPhilosophy.html
+++ b/OurPhilosophy.html
@@ -28,7 +28,7 @@
 						<h1 class="text-light">Our Philosophy</h1>
 						<p class="lead">
 							At Foot and Ball Academy, our primary goal is to help players develop a sustainable desire to
-							participate in the World Game, we know as football. We endeavour to create a healthy
+							participate in the World Game, know as football. We endeavour to create a healthy
 							environment, where players are taught to understand and then handle the competitive aspects of
 							the game, in the hopes they continue to play well into their adult lives.
 						</p>
@@ -45,12 +45,8 @@
 			<div class="row">
 				<div class="col-lg-6 col-md-6  align-self-center">
 					<p class="lead">
-						From U6's, Foot and Ball Academy sessions maintain <strong>a principal focus on the 1 v
-							1 duel.</strong>
-						W structure our sessions around primarily improving this area of a player’s game. This is
-						motivated by our CORE Philosophy, which follows a popularised philosophy utilised in elite parts
-						of
-						Europe (not our own):
+						From U6's, Foot and Ball Academy sessions maintain <strong>a principal focus on player development around the 1 v
+							1 duel.</strong> This is motivated by our CORE Philosophy, which follows a popularised philosophy utilised in elite parts of Europe (not our own):
 					</p>
 
 					<p class="lead">
@@ -76,7 +72,8 @@
 						<h1 class="text-light">Who can join?</h1>
 						<p class="lead">
 							We warmly <u>welcome everyone!</u> From first-timers to those with some years of
-							experience. At Foot and Ball Academy self-improvement is a player’s primary challenge.
+							experience. However, <strong>we do not tolerate bad attitude, arrogany, lazy, or casual players.</strong> 
+							At Foot and Ball Academy self-improvement is a player’s primary challenge.
 						<p class="lead">
 							<em>“How good you were yesterday is yesterday’s achievement. Not todays.” - Coach Nick </em></p>
 
@@ -101,10 +98,10 @@
 					<h1 class="text-dark">The Technical Component</h1>
 					<h3 class="text-dark">'Toolbox' Concept.</h3>
 					<p class="lead">
-						We help players understand they want to build a strong technical ‘toolbox.’ Each key part of their
-						body e.g., feet, thighs, chest, and head can be thought of as a ‘tool’ to help them control the ball.
+						We help players understand they want to build a strong technical ‘toolbox,’ using each 'allowable' part of their
+						body e.g., feet, thighs, chest, when playing football. These can be thought of as ‘tools’ to help the player control, as well as manipulate the ball.
 						This incentivises them to develop as many ‘tools’ as possible, helping to problem solve during a
-						game. For example, outside left foot, inside left foot, laces of the left foot, soul, or studs of the left
+						game e.g. successfully passing a defender. For example, outside left foot, inside left foot, laces of the left foot, soul, or studs of the left
 						foot. Alone, that is four tools from just one foot!
 					</p>
 
@@ -118,29 +115,24 @@
 
 					<div class="col-lg-6 col-md-6  align-self-center">
 						<h2 class="text-dark">Session Guidelines</h2>
-						<p class="lead">As a brand-new Academy, you might want to know how we will generally approach a session.
+						<p class="lead">As a brand-new Academy, we take session strcuture seriously. 
+							At a minimum, if the player absorbs nothing else they will learn that a session has three primary compnents.
 							Below is a guideline for most** sessions for players U6's and above:</p>
 
 						<h3 class="text-dark">The Warmup:</h3>
 						<p class="lead">
-							A classic. Focuses on getting the players active and excited, ready to digest the core message of the
-							session e.g., passing or dribbling, etc.</p>
+							Imperative. The "warm up" is becoming a hot topic amongst medical professionals. A way of greatly reducing injury in the long-term. 
+							The warmup is designed to teach our young players to 'talk to their bodies.' Prepare them for what's coming (training). 
+							We focus on getting the players active and excited, ready to digest the core message of the
+							session
+.</p>
 						<p>
-							Duration: ~5 minutes
-						</p>
-
-						<h3 class="text-dark">Ball Mastery:</h3>
-						<p class="lead">
-							This is a staple of Foot and Ball Academy. A series of player-and- their-ball manipulation exercises.
-							Designed to strengthen the players personal understanding of how they can or might choose to
-							move a ball around. E.g., soul taps, toe taps, etc.</p>
-						<p>
-							Duration: ~10 minutes
+							Duration: ~15 minutes
 						</p>
 
 						<h3 class="text-dark">Fast Feet:</h3>
 						<p class="lead">
-							This portion of the session is designed to improve the fast feet response of a player. Unopposed
+							If there is time, this portion of the session is designed to improve the fast feet response of a player as well as their <strong> balance</strong>. Unopposed
 							coordination work. This section does not last long but gets the heart rate up! It involves popular
 							tools such as the agility ladder, fast feet through cones, and short sprints (less than 5 m).</p>
 						<p>
@@ -150,10 +142,10 @@
 						<h3 class="text-dark">Session theme:</h3>
 						<p class="lead">
 							Is the focus of the week: passing? Dribbling? Extended Ball Mastery? 1 v 1s? Whatever it may be this
-							segment of the session delivers a fun, inclusive set of exercises designed to drive home the key
+							segment of the session delivers an engaging, inclusive set of exercises designed to drive home the key
 							message of that week’s focus.</p>
 						<p>
-							Duration: ~15 minutes
+							Duration: ~15-20 minutes
 						</p>
 
 						<h3 class="text-dark">The 1 v 1 duels:</h3>
