--- a/TOS.html
+++ b/TOS.html
@@ -73,11 +73,14 @@
 						and Ball Academy.</p>
 					<p>
 						Your child’s place is not secured until fees are paid in full.</p>
+					
 					<h2>Cancellation</h2>
 					<p>Foot and Ball Academy operates a no-refund policy for a change or mind or missed classes, unless under
 						extreme medical conditions, as determined by a medical doctor.</p>
 					<p>If for any reason you are not able to attend a session then every effort will be made to reschedule a
 						make-up class, depending on session availability. We cannot guarantee a make-up session.</p>
+					<p> Any make-up sessions requested cannot be scheduled or redeemed outside of the current Term. All session obligations expire at the end of the 10-week Term</p>
+					
 					<h3>Parental Cancellation</h3>
 					<p>The cancellation rights generally available to consumers in accordance with their statutory rights do not
 						apply to the classes provided by Foot and Ball Academy.</p>
@@ -205,20 +208,23 @@
 						religion, or ability.</p>
 
 					<h3>Player</h3>
+					<p>'Winning' and 'losing' will <strong>not be tolerated or sanctioned by any player</strong>.</p>
 					<p>The player will always be inclusive of others.</p>
 					<p>Focus will be on your own individual improvement and personal growth. Not winning.</p>
 					<p>Punctuality and Presentation are key. Arrive early and ready to train!</p>
 					<p>Bullying is strictly prohibited.</p>
 					<p>When the coach is speaking <b>you are not.</b></p>
 					<p>Foul language will not be tolerated*.</p>
+					<p>Dummy spits or tantrums will not be tolerated*.</p>
 					<p>Disruptive behaviour will not be tolerated*.</p>
 					<p>Rudeness towards peers or coaching staff will not be tolerated*.</p>
 					<p>*not be tolerated: see Disciplinary Procedures.</p>
 
 					<h3>Parent / Guardian</h3>
-					<p>All parents/guardians will respect and co-operate with all instructor’s decisions.</p>
+					<p>All parents/guardians will respect and co-operate with all the instructors' decisions.</p>
 					<p>Do not coach your child from the sidelines.</p>
 					<p>Do not interfere with the coach’s direction or session in general.</p>
+					<p>Do not cheer, clap or 'encourage' the player.</p>
 					<p>Foul language will not be tolerated*.</p>
 					<p>Disruptive behaviour will not be tolerated*.</p>
 					<p>Rudeness towards peers or coaching staff will not be tolerated*.</p>
