--- a/SchoolHolidays.html
+++ b/SchoolHolidays.html
@@ -28,7 +28,7 @@
 					<div class="col mt-5 pt-4">
 						<h1 class="text-light">School Holidays</h1>
 						<p class="lead">
-							School Holiday details coming soon.
+							SchA brief summary of school holiday details.
 						</p>
 					</div>
 				</div>
@@ -43,8 +43,19 @@
 			<div class="row">
 				<div class="col-lg-12 col-md-12  align-self-center">
 					
-          Details to come!
-
+         	<p class="lead">
+			School Holiday sessions are a promotional opportunity at the Academy. Often, we hope to be able to offer these sessions at a <strong> substantial </strong> discount to the general public.
+			</p>
+			<p class="lead">		
+                        These sessions are designed to offer insight into how our Academy functions, how we encourage or discipline the players, as well as educate them on football.
+			</p>
+			<p class="lead">		
+                         Holiday sessions will <strong> always </strong> include the three components of a session i.e., warm up, core message, and 1v1s. 
+			 They will tend towards a broader theme due to the limited time available (as opposed to a 10-week semester). 
+			</p>
+			<p class="lead">		
+                         Players will get to experience what our Academy has to offer them as well understand what we consider to be the most important aspects of football training. 
+			</p>
 				</div>
 			</div>
 
