--- a/SchoolHolidays.html
+++ b/SchoolHolidays.html
@@ -28,7 +28,7 @@
 					<div class="col mt-5 pt-4">
 						<h1 class="text-light">School Holidays</h1>
 						<p class="lead">
-							SchA brief summary of school holiday details.
+							A brief summary of school holiday details.
 						</p>
 					</div>
 				</div>
