--- a/AgeCategories.html
+++ b/AgeCategories.html
@@ -71,10 +71,10 @@
 		Basic dribbling, weaving, and ball mastery are taught in this age group, with an emphasis on developing the player in the 1v1 environment.  </p>
 					
         <p class="lead"> <strong>U9’s and U10’s: </strong></p>
-					<p>Sessions available. Sessions available. Age Category Information Coming Soon. </p>
+					<p>Sessions available. Age Category Information Coming Soon. </p>
 					
 	<p class="lead"> <strong>U11’s and U12’s: </strong></p>
-					<p>Sessions available. Sessions available. Age Category Information Coming Soon. </p>
+					<p>Sessions available. Age Category Information Coming Soon. </p>
 
 				</div>
 			</div>
