--- a/Pricing.html
+++ b/Pricing.html
@@ -43,19 +43,19 @@
 			<div class="row">
 				<div class="col-lg-12 col-md-12  align-self-center">
 					
-				<p>All payments are upfront, covering the duration of the current school term (or from the Term week you join us). </p>
+				<p class="lead">All payments are upfront, covering the duration of the current school term (or from the Term week you join us). </p>
 				
-					<p>Below as follows:</p>
-					<p><b>U6’s – U7’s</b> (45-minute session): <b>$13 per player per session</b>. Cap: 8 players.</p>
-					<p><b>U7’s – U8’s</b> (1 hour session): <b>$26 per player per session</b>. Cap: 5 players.</p>
-					<p><b>U9’s – U10’s</b> (1 hour session): <b>$26 per player per session</b>. Cap: 5 players. </p>
-					<p><b>U11’s – U12’s</b> (1 hour session): <b>$26 per player per session</b>. Cap 5 players. </p>
+					<p class="lead">Below as follows:</p>
+					<p class="lead"><b>U6’s – U7’s</b> (45-minute session): <b>$13 per player per session</b>. Cap: 8 players.</p>
+					<p class="lead"><b>U7’s – U8’s</b> (1 hour session): <b>$26 per player per session</b>. Cap: 5 players.</p>
+					<p class="lead"><b>U9’s – U10’s</b> (1 hour session): <b>$26 per player per session</b>. Cap: 5 players. </p>
+					<p class="lead"><b>U11’s – U12’s</b> (1 hour session): <b>$26 per player per session</b>. Cap 5 players. </p>
 
-					<p>Click on <a href="AgeCategories">Age Categories</a>, or <a href="SchoolTerms">School Terms</a>, or <a href="OurPhilosophy">Our Philosophy</a> for more in depth information on how and why our Academy is structured the way it is. </p>
+					<p class="lead">Click on <a href="AgeCategories">Age Categories</a>, or <a href="SchoolTerms">School Terms</a>, or <a href="OurPhilosophy">Our Philosophy</a> for more in depth information on how and why our Academy is structured the way it is. </p>
 
-					<p>Click to find out more about our <a href="TOS">Terms and Conditions</a>.</p>
+					<p class="lead">Click to find out more about our <a href="TOS">Terms and Conditions</a>.</p>
 
-					<p> All enquires: P: +61 452 583 279 | E: footandballacademy@outlook.com </p>
+					<p class="lead"> All enquires: P: +61 452 583 279 | E: footandballacademy@outlook.com </p>
 				</div>
 			</div>
 			<div class="row">
