--- a/register.html
+++ b/register.html
@@ -75,13 +75,13 @@
 
 				<div class="col-md-6 mb-3 d-flex align-items-stretch">
 					<div class="card" style="width:100%">
-						<a href="https://forms.office.com/r/pqAz1MpsFc">
-						<img src="img/Term_2_2023_FAB_Flyer_small.png" style="max-height:300px" class="card-img-top" alt="Progressive Training Programs"></a>
+						<a href="https://forms.office.com/r/nZStieTVzW">
+						<img src="img/t32023_wv.png" style="max-height:300px" class="card-img-top" alt="Progressive Training Programs"></a>
 						<div class="card-body d-flex flex-column">
-							<h2 class="card-title">2023 School Term 2</h2>
+							<h2 class="card-title">2023 School Term 3</h2>
 							<p class="card-text">10 Week-Term Progressive Training Program. <a href="SchoolTerms.html"
 									class="link-secondary">Read more...</a></p>
-							<a href="https://forms.office.com/r/pqAz1MpsFc"
+							<a href="https://forms.office.com/r/nZStieTVzW"
 								class="btn btn-info">Register Now</a>
 						</div>
 					</div>
