--- a/register.html
+++ b/register.html
@@ -43,16 +43,15 @@
 
 		<div class="container p-5">
 			<div class="row">
-				
-				<div class="col-md-6 mb-3 d-flex align-items-stretch">
+					<div class="col-md-6 mb-3 d-flex align-items-stretch">
 					<div class="card" style="width:100%">
-						<a href="https://forms.office.com/r/g08JHZpnEW">
-						<img src="img/Website_July_2023_Flyer_cropped.png" style="max-height:300px" class="card-img-top" alt="Holiday Sessions"></a>
+						<a href="https://forms.office.com/r/nZStieTVzW">
+						<img src="img/t32023_wv.png" style="max-height:300px" class="card-img-top" alt="Progressive Training Programs"></a>
 						<div class="card-body d-flex flex-column">
-							<h2 class="card-title">July 2023 Holiday Sessions</h2>
-							<p class="card-text">July holidays are fast approaching. Sign up now!<a href="OurPhilosophy.html"
+							<h2 class="card-title">2023 School Term 3</h2>
+							<p class="card-text">Free Trial? or Registering? CLICK!. <a href="SchoolTerms.html"
 									class="link-secondary">Read more...</a></p>
-							<a href="https://forms.office.com/r/g08JHZpnEW"
+							<a href="https://forms.office.com/r/nZStieTVzW"
 								class="btn btn-info">Register Now</a>
 
 						</div>
@@ -72,17 +71,17 @@
 						</div>
 					</div>
 				</div> 
-
-				<div class="col-md-6 mb-3 d-flex align-items-stretch">
+					<div class="col-md-6 mb-3 d-flex align-items-stretch">
 					<div class="card" style="width:100%">
-						<a href="https://forms.office.com/r/nZStieTVzW">
-						<img src="img/t32023_wv.png" style="max-height:300px" class="card-img-top" alt="Progressive Training Programs"></a>
+						<a href="https://forms.office.com/r/g08JHZpnEW">
+						<img src="img/Website_July_2023_Flyer_cropped.png" style="max-height:300px" class="card-img-top" alt="Holiday Sessions"></a>
 						<div class="card-body d-flex flex-column">
-							<h2 class="card-title">2023 School Term 3</h2>
-							<p class="card-text">10 Week-Term Progressive Training Program. <a href="SchoolTerms.html"
+							<h2 class="card-title">July 2023 Holiday Sessions</h2>
+							<p class="card-text">July holidays are fast approaching. Sign up now!<a href="OurPhilosophy.html"
 									class="link-secondary">Read more...</a></p>
-							<a href="https://forms.office.com/r/nZStieTVzW"
+							<a href="https://forms.office.com/r/g08JHZpnEW"
 								class="btn btn-info">Register Now</a>
+
 						</div>
 					</div>
 				</div>
