--- a/register.html
+++ b/register.html
@@ -49,7 +49,7 @@
 						<img src="img/t32023_wv.png" style="max-height:300px" class="card-img-top" alt="Progressive Training Programs"></a>
 						<div class="card-body d-flex flex-column">
 							<h2 class="card-title">2023 School Term 3</h2>
-							<p class="card-text">Free Trial? or Registering? CLICK!. <a href="SchoolTerms.html"
+							<p class="card-text">Free Trial? or Registering? CLICK "Register Now". <a href="SchoolTerms.html"
 									class="link-secondary">Read more...</a></p>
 							<a href="https://forms.office.com/r/nZStieTVzW"
 								class="btn btn-info">Register Now</a>
