--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
 			<div class="row py-5 text-center">
 				<div class="col-lg-4 col-md-4">
 					<i class="fas fa-futbol mb-3"></i>
-					<h3>July 2023 Holiday Sessions </h3>
-					<p class="lead mt-2">Enrolling now. Click below to find out more. Then  
-					<a href="https://forms.office.com/r/g08JHZpnEW" target="_blank">register.</a></p>
-					<a target="_blank" href="./img/July_holidays_Flyer.png">
-						<img src="./img/July_holidays_Flyer.png" alt="Forest" style="width:150px">
+					<h3>Term 3, 2023! </h3>
+					<p class="lead mt-2"> A free trial? enrolling? or re-enrolling? It's all in one place now.  
+					<a href="https://forms.office.com/r/nZStieTVzW" target="_blank">Register Now.</a></p>
+					<a target="_blank" href="./img/t32023_wv.png">
+						<img src="./img/t32023_wv.png" alt="Forest" style="width:150px">
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-4">
