--- a/register.html
+++ b/register.html
@@ -60,27 +60,27 @@
 
 				<div class="col-md-6 mb-3 d-flex align-items-stretch">
 					<div class="card" style="width:100%">
-						<a href="https://forms.office.com/r/kjSRuFtY4z">
-						<img src="img/trial_small.png" style="max-height: 300px;" class="card-img-top"
+						<a href="https://footandball.com.au">
+						<img src="img/stock3.png" style="max-height: 300px;" class="card-img-top"
 							alt="Free Trial"></a>
 						<div class="card-body d-flex flex-column">
-							<h2 class="card-title">ONE Free Trial</h2>
-							<p class="card-text">Just found us? Unsure? Book ONE free trial. Come down!.</p>
-							<a href="https://forms.office.com/r/kjSRuFtY4z"
-								class="btn btn-info">Register Now</a>
+							<h2 class="card-title">Games Night</h2>
+							<p class="card-text">Coming Soon....</p>
+							<a href="https://footandball.com.au"
+								class="btn btn-info">TBA</a>
 						</div>
 					</div>
 				</div> 
 					<div class="col-md-6 mb-3 d-flex align-items-stretch">
 					<div class="card" style="width:100%">
-						<a href="https://forms.office.com/r/g08JHZpnEW">
-						<img src="img/Website_July_2023_Flyer_cropped.png" style="max-height:300px" class="card-img-top" alt="Holiday Sessions"></a>
+						<a href="https://footandball.com.au">
+						<img src="img/stock5.png" style="max-height:300px" class="card-img-top" alt="Holiday Sessions"></a>
 						<div class="card-body d-flex flex-column">
-							<h2 class="card-title">July 2023 Holiday Sessions</h2>
-							<p class="card-text">July holidays are fast approaching. Sign up now!<a href="OurPhilosophy.html"
+							<h2 class="card-title">Mid Term Workshops</h2>
+							<p class="card-text">Coming Soon...<a href="OurPhilosophy.html"
 									class="link-secondary">Read more...</a></p>
-							<a href="https://forms.office.com/r/g08JHZpnEW"
-								class="btn btn-info">Register Now</a>
+							<a href="https://footandball.com.au"
+								class="btn btn-info">TBA</a>
 
 						</div>
 					</div>
