--- a/register.html
+++ b/register.html
@@ -61,7 +61,7 @@
 				<div class="col-md-6 mb-3 d-flex align-items-stretch">
 					<div class="card" style="width:100%">
 						<a href="https://footandball.com.au">
-						<img src="img/stock3.png" style="max-height: 300px;" class="card-img-top"
+						<img src="img/stock3.jpg" style="max-height: 300px;" class="card-img-top"
 							alt="Free Trial"></a>
 						<div class="card-body d-flex flex-column">
 							<h2 class="card-title">Games Night</h2>
@@ -74,7 +74,7 @@
 					<div class="col-md-6 mb-3 d-flex align-items-stretch">
 					<div class="card" style="width:100%">
 						<a href="https://footandball.com.au">
-						<img src="img/stock5.png" style="max-height:300px" class="card-img-top" alt="Holiday Sessions"></a>
+						<img src="img/stock5.jpg" style="max-height:300px" class="card-img-top" alt="Holiday Sessions"></a>
 						<div class="card-body d-flex flex-column">
 							<h2 class="card-title">Mid Term Workshops</h2>
 							<p class="card-text">Coming Soon...<a href="OurPhilosophy.html"
