--- a/register.html
+++ b/register.html
@@ -62,9 +62,9 @@
 					<div class="card" style="width:100%">
 						<a href="https://footandball.com.au">
 						<img src="img/stock3.jpg" style="max-height: 300px;" class="card-img-top"
-							alt="Free Trial"></a>
+							alt="Games"></a>
 						<div class="card-body d-flex flex-column">
-							<h2 class="card-title">Games Night</h2>
+							<h2 class="card-title"> 1v1 Games Night</h2>
 							<p class="card-text">Coming Soon....</p>
 							<a href="https://footandball.com.au"
 								class="btn btn-info">TBA</a>
@@ -74,9 +74,9 @@
 					<div class="col-md-6 mb-3 d-flex align-items-stretch">
 					<div class="card" style="width:100%">
 						<a href="https://footandball.com.au">
-						<img src="img/stock5.jpg" style="max-height:300px" class="card-img-top" alt="Holiday Sessions"></a>
+						<img src="img/stock5.jpg" style="max-height:300px" class="card-img-top" alt="Mid Term Workshops"></a>
 						<div class="card-body d-flex flex-column">
-							<h2 class="card-title">Mid Term Workshops</h2>
+							<h2 class="card-title">Mid-Term Workshops</h2>
 							<p class="card-text">Coming Soon...<a href="OurPhilosophy.html"
 									class="link-secondary">Read more...</a></p>
 							<a href="https://footandball.com.au"
