--- a/register.html
+++ b/register.html
@@ -60,14 +60,15 @@
 
 				<div class="col-md-6 mb-3 d-flex align-items-stretch">
 					<div class="card" style="width:100%">
-						<a href="https://footandball.com.au">
+						<a href="https://forms.office.com/r/FiJYZkRaZu">
 						<img src="img/stock3.jpg" style="max-height: 300px;" class="card-img-top"
 							alt="Games"></a>
 						<div class="card-body d-flex flex-column">
 							<h2 class="card-title"> 1v1 Games Night</h2>
-							<p class="card-text">Coming Soon....</p>
-							<a href="https://footandball.com.au"
-								class="btn btn-info">TBA</a>
+							<p class="card-text"> 1 v 1 DUELS!! CLICK "Register Now". <a href="Philosophy.html"
+									class="link-secondary">Read more...</a></p>
+							<a href="https://forms.office.com/r/FiJYZkRaZu"
+								class="btn btn-info">Register Now</a>
 						</div>
 					</div>
 				</div> 
