--- a/register.html
+++ b/register.html
@@ -65,7 +65,7 @@
 							alt="Games"></a>
 						<div class="card-body d-flex flex-column">
 							<h2 class="card-title"> 1v1 Games Night</h2>
-							<p class="card-text"> 1 v 1 DUELS!! CLICK "Register Now". <a href="Philosophy.html"
+							<p class="card-text"> 1 v 1 DUELS!! CLICK "Register Now". <a href="OurPhilosophy.html"
 									class="link-secondary">Read more...</a></p>
 							<a href="https://forms.office.com/r/FiJYZkRaZu"
 								class="btn btn-info">Register Now</a>
