--- a/register.html
+++ b/register.html
@@ -61,7 +61,7 @@
 				<div class="col-md-6 mb-3 d-flex align-items-stretch">
 					<div class="card" style="width:100%">
 						<a href="https://forms.office.com/r/FiJYZkRaZu">
-						<img src="img/stock3.jpg" style="max-height: 300px;" class="card-img-top"
+						<img src="img/t3gn28.07.2023.wv.png" style="max-height: 300px;" class="card-img-top"
 							alt="Games"></a>
 						<div class="card-body d-flex flex-column">
 							<h2 class="card-title"> 1v1 Games Night</h2>
