--- a/OurPhilosophy.html
+++ b/OurPhilosophy.html
@@ -72,7 +72,7 @@
 						<h1 class="text-light">Who can join?</h1>
 						<p class="lead">
 							We warmly <u>welcome everyone!</u> From first-timers to those with some years of
-							experience. However, <strong>we do not tolerate bad attitude, arrogany, lazy, or casual players.</strong> 
+							experience. However, <strong>we do not tolerate bad attitude, arrogant, lazy, or casual players.</strong> 
 							At Foot and Ball Academy self-improvement is a player’s primary challenge.
 						<p class="lead">
 							<em>“How good you were yesterday is yesterday’s achievement. Not todays.” - Coach Nick </em></p>
