--- a/navbar.html
+++ b/navbar.html
@@ -21,6 +21,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="Pricing.html">Pricing</a>
+            <a class="dropdown-item" href="sub_play.html">Subscription Players</a>
             <a class="dropdown-item" href="SchoolTerms.html">School Terms</a>
             <a class="dropdown-item" href="SchoolHolidays.html">School Holidays</a>
             <a class="dropdown-item" href="PrivateSessions.html">Private Sessions</a>
