--- a/sub_play.html
+++ b/sub_play.html
@@ -53,6 +53,23 @@
 						covered through coaching on a more regular basis.</p>
 					<p class="lead">
 						To satisfy this we have devised a new (draft) <b>rotational Term 4 weekly timetable</b>, which incorporates more elements of the basic game: </p>
+					<h2> Week one Rotation</h2>
+					<table>
+						<tr>
+							<td>Monday</td>
+							<td>Tuesday</td>
+							<td>Wednesday</td>
+							<td>Thursday</td>
+							<td>Friday</td>
+						</tr>
+						<tr>
+							<td>Dribbling/Ball Mastery</td>
+							<td>Passing/Ball Control</td>
+							<td>Games Night</td>
+							<td>Possession/Turns</td>
+							<td>Defending/Transitions</td>
+						</tr>
+					</table>
 
 					<h3> Coach to Player Ratio</h3>
 					<p class="lead">
