--- a/sub_play.html
+++ b/sub_play.html
@@ -54,7 +54,7 @@
 					<p class="lead">
 						To satisfy this we have devised a new (draft) <b>rotational Term 4 weekly timetable</b>, which incorporates more elements of the basic game: </p>
 					<h2> Week one Rotation</h2>
-					<table>
+					<table border="1">
 						<tr>
 							<td>Monday</td>
 							<td>Tuesday</td>
