--- a/sub_play.html
+++ b/sub_play.html
@@ -56,11 +56,11 @@
 					<h2> Week one Rotation</h2>
 					<table border="1">
 						<tr>
-							<td>Monday</td>
-							<td>Tuesday</td>
-							<td>Wednesday</td>
-							<td>Thursday</td>
-							<td>Friday</td>
+							<td style="text-align: center; vertical-align: middle;">Monday</td>
+							<td style="text-align: center; vertical-align: middle;">Tuesday</td>
+							<td style="text-align: center; vertical-align: middle;">Wednesday</td>
+							<td style="text-align: center; vertical-align: middle;">Thursday</td>
+							<td style="text-align: center; vertical-align: middle;">Friday</td>
 						</tr>
 						<tr>
 							<td>Dribbling/Ball Mastery</td>
