--- a/sub_play.html
+++ b/sub_play.html
@@ -53,7 +53,7 @@
 						covered through coaching on a more regular basis.</p>
 					<p class="lead">
 						To satisfy this we have devised a new (draft) <b>rotational Term 4 weekly timetable</b>, which incorporates more elements of the basic game: </p>
-					<h2> Week one Rotation</h2>
+					<h4><u>Week One Rotation</u></h4>
 					<table border="1">
 						<tr>
 							<td style="text-align: center; vertical-align: middle;">Monday</td>
@@ -63,13 +63,47 @@
 							<td style="text-align: center; vertical-align: middle;">Friday</td>
 						</tr>
 						<tr>
-							<td>Dribbling/Ball Mastery</td>
+							<td><b>Dribbling/Ball Mastery</b></td>
 							<td>Passing/Ball Control</td>
 							<td>Games Night</td>
 							<td>Possession/Turns</td>
 							<td>Defending/Transitions</td>
 						</tr>
 					</table>
+					<h4><u>Week Two Rotation</u></h4>
+					<table border="1">
+						<tr>
+							<td style="text-align: center; vertical-align: middle;">Monday</td>
+							<td style="text-align: center; vertical-align: middle;">Tuesday</td>
+							<td style="text-align: center; vertical-align: middle;">Wednesday</td>
+							<td style="text-align: center; vertical-align: middle;">Thursday</td>
+							<td style="text-align: center; vertical-align: middle;">Friday</td>
+						</tr>
+						<tr>
+							<td>Defending/Transitions</td>
+							<td><b>Dribbling/Ball Mastery</b></td>
+							<td>Passing/Ball Control</td>
+							<td>Games Night</td>
+							<td>Possession/Turns</td>
+						</tr>
+					</table>
+					<h4><u>Week Three Rotation</u></h4>
+					<table border="1">
+						<tr>
+							<td style="text-align: center; vertical-align: middle;">Monday</td>
+							<td style="text-align: center; vertical-align: middle;">Tuesday</td>
+							<td style="text-align: center; vertical-align: middle;">Wednesday</td>
+							<td style="text-align: center; vertical-align: middle;">Thursday</td>
+							<td style="text-align: center; vertical-align: middle;">Friday</td>
+						</tr>
+						<tr>
+							<td>Possession/Turns</td>
+							<td>Defending/Transitions</td>
+							<td><b>Dribbling/Ball Mastery</b></td>
+							<td>Passing/Ball Control</td>
+							<td>Games Night</td>
+						</tr>
+					</table>				
 
 					<h3> Coach to Player Ratio</h3>
 					<p class="lead">
