--- a/sub_play.html
+++ b/sub_play.html
@@ -52,7 +52,8 @@
 						An increase in contact hours between the Academy and player ensures more aspects of the player’s technical, tactical, and mental elements are 
 						covered through coaching on a more regular basis.</p>
 					<p class="lead">
-						To satisfy this we have devised a new (draft) <b>rotational Term 4 weekly timetable</b>, which incorporates more elements of the basic game: </p>
+						To satisfy this we have devised a new (draft) <b>rotational Term 4 weekly timetable</b>, which incorporates more elements of the basic game 
+						(note: we highlight the dribbling/ball mastery element to better illustrate the rotational concept): </p>
 					<h4><u>Week One Rotation</u></h4>
 					<table border="1">
 						<tr>
@@ -103,7 +104,16 @@
 							<td>Passing/Ball Control</td>
 							<td>Games Night</td>
 						</tr>
-					</table>				
+					</table>	
+					<p class="lead">
+						This rotational pattern will contunie for the rest of the (above) week and then reset and go again for the remainder of the weeks of Term.</p>
+					<p class="lead">
+						This new timetable structure is designed to accommodate all Academy clients:</p>
+					<p class="lead">
+						First, our customary fixed clients, which attend once per week. Your session will rotate across all major game-related elements throughout the term, ensuring
+						adequate exposure to all game-elements included above. 
+					<p class="lead">
+						Second, our new subscribers who can attend anywhere up to five sessions per week will experience a wider, more encompassing variety of training sessions.</p>
 
 					<h3> Coach to Player Ratio</h3>
 					<p class="lead">
@@ -118,15 +128,43 @@
 			
 					<h3>Term 4, 2023</h3>
 					<p class="lead">
-						Term 4 represents a trial period where this subscription idea will be rolled out and <b>offered to the Development Squad only</b>.</p>
-					<h3>Joining Fees and Uniform Fees</h3>
+						Term 4 represents a trial period where this subscription model will be rolled out and <b>offered to the Development Squad only</b>. i.e., U11's - U13's.</p>
 					<p class="lead">
-						<b>None!</b> At Foot and Ball Academy we believe our <b>no joining fee and no uniform fee</b> is a financial advantage in
-						this market space. We pride ourselves on having no additional fees beyond payment of the players direct
-						footballing education.
+						<b>The trial rate will be $55 per week.</b></p>
+					<p class="lead">
+						This will allow any subscriber access to between one and five training sessions of 1 hour and 15 minutes length per week for the duration of Term 4, only.</p>
+					<p class="lead">
+						Due to the preliminary nature of this idea’s implementation <b>our standard usual T+Cs will not apply.</b>
+						i.e., if the client wishes to schedule a refund for any reason during the term, they may do so without question.</p>
+					<p class="lead">
+						Term 4 subscriber-related goals include the following:</p>
+					<p class="lead">
+						Increase the contact hours between the Academy and player.</p>
+					<p class="lead">
+						Facilitate a more rigorous learning environment for every player.</p>
+					<p class="lead">
+						Mix and match players across the broader squad (more competitive 1 v 1 / 2 v 2, etc).</p>
+					<p class="lead">
+						Remove the need for “catch-up” or “make-up” sessions.</p>
+					<p class="lead">
+						Reduce the need for logistical communication between the client and academy 
+						i.e., our conversations would become more focused around the player and less about schedule conflicts. </p>
+					<p class="lead">
+						Sessions will run at a consistent time each academy evening. Creating a more stable routine.</p>
+					
+					<h3>Expansion as Required</h3>
+					<p class="lead">
+						Head Coach Nick will wait for the first 10 registrations (either subscriber or fixed enrolments) before hiring a second trainer. Then the ratio will drop. 
 						We strive to provide affordable access to our services as reasonably possible. Player improvement is truly
-						at the foundation of Foot and Ball Academy.
-
+						at the foundation of Foot and Ball Academy. </p>
+					<p class="lead">
+						This is necessary as part of the start-up business model. i.e., a few growing pains at the very start! But then it should be smooth sailing re: player to trainer ratio.</p>
+					
+					<h3>Final Thoughts</h3>
+					<p class="lead">
+						We look forward to receiving all feedback and questions from all our Development Squad clients, leading up to and including the duration of Term 4, regarding this new approach!</p>
+					<p class="lead">
+						See you on the training grounds!</p>
 				</div>
 			</div>
 			<div class="row">
