--- a/sub_play.html
+++ b/sub_play.html
@@ -106,7 +106,7 @@
 						</tr>
 					</table>	
 					<p class="lead">
-						This rotational pattern will contunie for the rest of the (above) week and then reset and go again for the remainder of the weeks of Term.</p>
+						This rotational pattern will continue for the rest of the (above) week and then reset and go again for the remainder of the weeks of Term.</p>
 					<p class="lead">
 						This new timetable structure is designed to accommodate all Academy clients:</p>
 					<p class="lead">
@@ -117,7 +117,7 @@
 
 					<h3> Coach to Player Ratio</h3>
 					<p class="lead">
-						One of the more frequent asked FAQ’s concerns the quality of coaching during any given session on any given day.</p>
+						One of the more frequently asked FAQ’s concerns the quality of coaching during any given session on any given day.</p>
 					<p class="lead">
 						At Foot and Ball Academy we pride ourselves on striving to offer a well-researched, superior training session.</p>
 					<p class="lead">
@@ -134,7 +134,7 @@
 					<p class="lead">
 						This will allow any subscriber access to between one and five training sessions of 1 hour and 15 minutes length per week for the duration of Term 4, only.</p>
 					<p class="lead">
-						Due to the preliminary nature of this idea’s implementation <b>our standard usual T+Cs will not apply.</b>
+						Due to the preliminary nature of this idea’s implementation <b>our standard payment T+Cs (only) will not apply.</b>
 						i.e., if the client wishes to schedule a refund for any reason during the term, they may do so without question.</p>
 					<p class="lead">
 						Term 4 subscriber-related goals include the following:</p>
@@ -169,7 +169,7 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-12 col-md-12  align-self-center">
-					<a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUM1VEWjRDMDdBN1QzMTlLWjIxV0kySUJVTS4u" class="btn btn-warning" role="button">Click Here to Register</a>
+					<a href="footandball.com.au/register" class="btn btn-warning" role="button">Registration coming soon..</a>
 				</div>
 			</div>
 
