--- a/sub_play.html
+++ b/sub_play.html
@@ -169,7 +169,7 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-12 col-md-12  align-self-center">
-					<a href="footandball.com.au/register" class="btn btn-warning" role="button">Registration coming soon..</a>
+					<a href="register.html" class="btn btn-warning" role="button">Registration coming soon..</a>
 				</div>
 			</div>
 
