--- a/Pricing.html
+++ b/Pricing.html
@@ -49,14 +49,14 @@
 					<p class="lead"><b>U6’s – U7’s</b> (45-minute session): <b>$13 per player per session</b>. Cap: 8 players.</p>
 					<p class="lead"><b>U7’s – U8’s</b> (1 hour session): <b>$26 per player per session</b>.Cap: 5 players.</p>
 					<p class="lead"><b>U9’s – U10’s</b> (1 hour session): <b>$26 per player per session</b>. Cap: 5 players. </p>
-					<p class="lead"><b>U11’s – U12’s(+ U13's)</b> (1 hour 15 minute session): <b>(Term 4 price)$30 per player per session</b>.</p>
-					<p class="lead"><b>Development Squad Weekly Subscription</b> (1 hour 15 minute session): <b>(Term 4 price)$55 per week</b>. Click on <a href="sub_play">Subscription Players</a> to find out more!</p>
+					<p class="lead"><b>U11’s – U12’s(+ U13's)</b> (1 hour 15 minute session): <b>(from Term 4) $30 per player per session</b>.</p>
+					<p class="lead"><b>Development Squad Weekly Subscription</b> (1 hour 15 minute session): <b>(from Term 4) $55 per week</b>. Click on <a href="sub_play">Subscription Players</a> to find out more!</p>
 					
-					<p class="lead"><b>Academy Sibling Discount<b>$22 per additional player per session</b>.</p>
-					<p class="lead"><b>Academy Development Squad Sibling Discount<b>$25 per additional player per session</b>.</p>
+					<p class="lead">Academy Sibling Discount: <b>$22 per additional player per session</b>.</p>
+					<p class="lead">Academy Development Squad Sibling Discount:<b>$25 per additional player per session</b>.</p>
 					<p class="lead">There are <b>no discounts</b> on the subscription rate for siblings.</p>
 					
-					<p class="lead">Click on <a href="AgeCategories">Age Categories</a>, or <a href="SchoolTerms">School Terms</a>, or <a href="OurPhilosophy">Our Philosophy</a> for more in depth information on how and why our Academy is structured the way it is. </p>
+					<p class="lead">Click on <a href="AgeCategories">Age Categories</a>,<a href="SchoolTerms">School Terms</a>, or <a href="OurPhilosophy">Our Philosophy</a> for more information on our Academy. </p>
 
 					<p class="lead">Click to find out more about our <a href="TOS">Terms and Conditions</a>.</p>
 
