--- a/sub_play.html
+++ b/sub_play.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
-
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
@@ -13,6 +11,14 @@
 	<link rel="stylesheet" type="text/css" href="css/fontawesome/css/all.css">
 	<title>Foot and Ball Academy</title>
 </head>
+
+<style>
+td {
+ text-align: center; 
+ vertical-align: middle; 
+ padding:5px;
+ }
+</style>
 
 <body>
 
@@ -43,25 +49,25 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 col-md-12  align-self-center">
-					<p class="lead">
+					<p >
 						This subscription model will allow a subscribing player access to anywhere between <b>one and five weekly training sessions.</b></p>
-					<p class="lead">
+					<p >
 						This operational approach is based on creating a more football-intensive environment <b>for dedicated players</b>, 
 						whilst also incorporating our customary players, who usually attend once per week. </p>
-					<p class="lead">
+					<p >
 						An increase in contact hours between the Academy and player ensures more aspects of the player’s technical, tactical, and mental elements are 
 						covered through coaching on a more regular basis.</p>
-					<p class="lead">
+					<p >
 						To satisfy this we have devised a new (draft) <b>rotational Term 4 weekly timetable</b>, which incorporates more elements of the basic game 
 						(note: we highlight the dribbling/ball mastery element to better illustrate the rotational concept): </p>
 					<h4><u>Week One Rotation</u></h4>
-					<table border="1">
+					<table class="py-5">
 						<tr>
-							<td style="text-align: center; vertical-align: middle;">Monday</td>
-							<td style="text-align: center; vertical-align: middle;">Tuesday</td>
-							<td style="text-align: center; vertical-align: middle;">Wednesday</td>
-							<td style="text-align: center; vertical-align: middle;">Thursday</td>
-							<td style="text-align: center; vertical-align: middle;">Friday</td>
+							<td>Monday</td>
+							<td>Tuesday</td>
+							<td>Wednesday</td>
+							<td>Thursday</td>
+							<td>Friday</td>
 						</tr>
 						<tr>
 							<td><b>Dribbling/Ball Mastery</b></td>
@@ -74,11 +80,11 @@
 					<h4><u>Week Two Rotation</u></h4>
 					<table border="1">
 						<tr>
-							<td style="text-align: center; vertical-align: middle;">Monday</td>
-							<td style="text-align: center; vertical-align: middle;">Tuesday</td>
-							<td style="text-align: center; vertical-align: middle;">Wednesday</td>
-							<td style="text-align: center; vertical-align: middle;">Thursday</td>
-							<td style="text-align: center; vertical-align: middle;">Friday</td>
+							<td>Monday</td>
+							<td>Tuesday</td>
+							<td>Wednesday</td>
+							<td>Thursday</td>
+							<td>Friday</td>
 						</tr>
 						<tr>
 							<td>Defending/Transitions</td>
@@ -91,11 +97,11 @@
 					<h4><u>Week Three Rotation</u></h4>
 					<table border="1">
 						<tr>
-							<td style="text-align: center; vertical-align: middle;">Monday</td>
-							<td style="text-align: center; vertical-align: middle;">Tuesday</td>
-							<td style="text-align: center; vertical-align: middle;">Wednesday</td>
-							<td style="text-align: center; vertical-align: middle;">Thursday</td>
-							<td style="text-align: center; vertical-align: middle;">Friday</td>
+							<td>Monday</td>
+							<td>Tuesday</td>
+							<td>Wednesday</td>
+							<td>Thursday</td>
+							<td>Friday</td>
 						</tr>
 						<tr>
 							<td>Possession/Turns</td>
@@ -105,65 +111,65 @@
 							<td>Games Night</td>
 						</tr>
 					</table>	
-					<p class="lead">
+					<p >
 						This rotational pattern will continue for the rest of the (above) week and then reset and go again for the remainder of the weeks of Term.</p>
-					<p class="lead">
+					<p >
 						This new timetable structure is designed to accommodate all Academy clients:</p>
-					<p class="lead">
+					<p >
 						First, our customary fixed clients, which attend once per week. Your session will rotate across all major game-related elements throughout the term, ensuring
 						adequate exposure to all game-elements included above. 
-					<p class="lead">
+					<p >
 						Second, our new subscribers who can attend anywhere up to five sessions per week will experience a wider, more encompassing variety of training sessions.</p>
 
 					<h3> Coach to Player Ratio</h3>
-					<p class="lead">
+					<p >
 						One of the more frequently asked FAQ’s concerns the quality of coaching during any given session on any given day.</p>
-					<p class="lead">
+					<p >
 						At Foot and Ball Academy we pride ourselves on striving to offer a well-researched, superior training session.</p>
-					<p class="lead">
+					<p >
 						<b>We sincerely strive for (but cannot guarantee) a maximum player to trainer ratio of 1:7.</b> 
 						That is, for every 7 players attending a session on any given night there will be at least one corresponding trainer.</p>
-					<p class="lead">
+					<p >
 						We calculate a relative balance between session pricing for the client and quality of coaching is more than adequate.</p>
 			
 					<h3>Term 4, 2023</h3>
-					<p class="lead">
+					<p >
 						Term 4 represents a trial period where this subscription model will be rolled out and <b>offered to the Development Squad only</b>. i.e., U11's - U13's.</p>
-					<p class="lead">
+					<p >
 						<b>The trial rate will be $55 per week.</b></p>
-					<p class="lead">
+					<p >
 						This will allow any subscriber access to between one and five training sessions of 1 hour and 15 minutes length per week for the duration of Term 4, only.</p>
-					<p class="lead">
+					<p >
 						Due to the preliminary nature of this idea’s implementation <b>our standard payment T+Cs (only) will not apply.</b>
 						i.e., if the client wishes to schedule a refund for any reason during the term, they may do so without question.</p>
-					<p class="lead">
+					<p >
 						Term 4 subscriber-related goals include the following:</p>
-					<p class="lead">
+					<p >
 						Increase the contact hours between the Academy and player.</p>
-					<p class="lead">
+					<p >
 						Facilitate a more rigorous learning environment for every player.</p>
-					<p class="lead">
+					<p >
 						Mix and match players across the broader squad (more competitive 1 v 1 / 2 v 2, etc).</p>
-					<p class="lead">
+					<p >
 						Remove the need for “catch-up” or “make-up” sessions.</p>
-					<p class="lead">
+					<p >
 						Reduce the need for logistical communication between the client and academy 
 						i.e., our conversations would become more focused around the player and less about schedule conflicts. </p>
-					<p class="lead">
+					<p >
 						Sessions will run at a consistent time each academy evening. Creating a more stable routine.</p>
 					
 					<h3>Expansion as Required</h3>
-					<p class="lead">
+					<p >
 						Head Coach Nick will wait for the first 10 registrations (either subscriber or fixed enrolments) before hiring a second trainer. Then the ratio will drop. 
 						We strive to provide affordable access to our services as reasonably possible. Player improvement is truly
 						at the foundation of Foot and Ball Academy. </p>
-					<p class="lead">
+					<p >
 						This is necessary as part of the start-up business model. i.e., a few growing pains at the very start! But then it should be smooth sailing re: player to trainer ratio.</p>
 					
 					<h3>Final Thoughts</h3>
-					<p class="lead">
+					<p >
 						We look forward to receiving all feedback and questions from all our Development Squad clients, leading up to and including the duration of Term 4, regarding this new approach!</p>
-					<p class="lead">
+					<p >
 						See you on the training grounds!</p>
 				</div>
 			</div>
