--- a/sub_play.html
+++ b/sub_play.html
@@ -61,7 +61,7 @@ td {
 						To satisfy this we have devised a new (draft) <b>rotational Term 4 weekly timetable</b>, which incorporates more elements of the basic game 
 						(note: we highlight the dribbling/ball mastery element to better illustrate the rotational concept): </p>
 					<h4><u>Week One Rotation</u></h4>
-					<table class="py-5">
+					<table border="1">
 						<tr>
 							<td>Monday</td>
 							<td>Tuesday</td>
@@ -175,7 +175,8 @@ td {
 			</div>
 			<div class="row">
 				<div class="col-lg-12 col-md-12  align-self-center">
-					<a href="register.html" class="btn btn-warning" role="button">Registration coming soon..</a>
+<!-- 					<a href="register.html" class="btn btn-warning" role="button">Registration coming soon...</a> -->
+					<a href="" class="btn btn-warning disabled" aria-disabled="true">Rego coming soon, call for details: 0452 583 279 </a>
 				</div>
 			</div>
 
