--- a/subscribers.html
+++ b/subscribers.html
@@ -33,7 +33,7 @@ td {
 			<div class="container">
 				<div class="row">
 					<div class="col mt-5 pt-4">
-						<h1 class="text-light">Subscription Players</h1>
+						<h1 class="text-light">Academy Subscribers</h1>
 						<p class="lead">
 						Foot and Ball Academy is incorporating a <b>new subscription-based business model</b> into its current operation. The first of its kind. 
 						</p>
