--- a/Timetables.html
+++ b/Timetables.html
@@ -41,16 +41,8 @@
 	<!-- Info Section Start -->
 	<section id="about-info" class="py-5 my-5">
 		<div class="container">
-			<p>April 18, 2023</p>
-			<img src="img/Term_2_2023_FAB_Flyer_FULL_small.png" width="70%">
-		</div>
-		<div class="container">
-			<p>March 22, 2023</p>
-			<img src="img/Easter_2023_details_1.png" width="70%">
-		</div>
-		<div class="container">
-			<p>March 18, 2023</p>
-			<img src="img/EARLY_Easter_Holiday_Session_2023.png" width="70%">
+			<p>(draft) Term 4, 2023</p>
+			<img src="img/2023.term_4_draft_tt.png" width="70%">
 		</div>
 	</section>
 	<!-- About Info Section End -->
