--- a/navbar.html
+++ b/navbar.html
@@ -44,7 +44,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="News.html">Timetables</a>
+          <a class="nav-link" href="Timetables.html">Timetables</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="ContactUs.html">Contact Us</a>
