--- a/Timetables.html
+++ b/Timetables.html
@@ -26,9 +26,9 @@
 			<div class="container">
 				<div class="row">
 					<div class="col mt-5 pt-4">
-						<h1 class="text-light">News</h1>
+						<h1 class="text-light">Timetables</h1>
 						<p class="lead">
-							Find out what is on!
+							Find out what is on and when!
 						</p>
 					</div>
 				</div>
