--- a/Timetables.html
+++ b/Timetables.html
@@ -41,6 +41,10 @@
 	<!-- Info Section Start -->
 	<section id="about-info" class="py-5 my-5">
 		<div class="container">
+			<p>Term 3 Sept - Oct <b>School Holidays</b>, 2023</p>
+			<img src="img/FAB_2023.Term3.hols.timetable.jpg" width="70%">
+		</div>
+		<div class="container">
 			<p>(draft) Term 4, 2023</p>
 			<img src="img/2023.term_4_draft_tt.png" width="70%">
 		</div>
