--- a/register.html
+++ b/register.html
@@ -86,14 +86,14 @@
 				</div>
 				<div class="col-md-6 mb-3 d-flex align-items-stretch">
 					<div class="card" style="width:100%">
-						<a href="https://footandball.com.au">
-						<img src="img/stock5.jpg" style="max-height:300px" class="card-img-top" alt="Mid Term Workshops"></a>
+						<a href="https://forms.office.com/r/5NbZzEHwDB">
+						<img src="img/2023.term3.hols.banner.final.png" style="max-height:300px" class="card-img-top" alt="Term 3 Holidays"></a>
 						<div class="card-body d-flex flex-column">
-							<h2 class="card-title">Mid-Term Workshops</h2>
-							<p class="card-text">Coming Soon...<a href="OurPhilosophy.html"
+							<h2 class="card-title">Term 3 Holiday Sessions</h2>
+							<p class="card-text">Register: click below or find out more --><a href="Timetables.html"
 									class="link-secondary">Read more...</a></p>
-							<a href="https://footandball.com.au"
-							class="btn btn-info">TBA</a>
+							<a href="https://forms.office.com/r/5NbZzEHwDB"
+							class="btn btn-info">Register Now</a>
 						</div>
 					</div>
 				</div>
