Reduced term 3 flyer size

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 					<h3>Term 3, 2023! </h3>
 					<p class="lead mt-2"> A free trial? enrolling? or re-enrolling? It's all in one place now.  
 					<a href="https://forms.office.com/r/nZStieTVzW" target="_blank">Register Now.</a></p>
-					<a target="_blank" href="./img/Term_3_Flyer.png">
-						<img src="./img/Term_3_Flyer.png" alt="Forest" style="width:150px">
+					<a target="_blank" href="./img/Term_3_Flyer.jpg">
+						<img src="./img/Term_3_Flyer.jpg" alt="Forest" style="width:150px">
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-4">
