--- a/timetables.html
+++ b/timetables.html
@@ -42,7 +42,7 @@
 	<section id="about-info" class="py-5 my-5">
 		<div class="container">
 			<p>Term 3 Sept - Oct <b>School Holidays</b>, 2023</p>
-			<img src="img/FAB_2023.Term3.hols.timetable.jpg" width="70%">
+			<img src="img/FAB_2023.Term3.holsUPDATED.timetable.png" width="70%">
 		</div>
 		<div class="container">
 			<p> <b>CONFIRMED</b> Term 4, 2023</p>
