--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
 			<div class="row py-5 text-center">
 				<div class="col-lg-4 col-md-4">
 					<i class="fas fa-futbol mb-3"></i>
-					<h3>Term 3, 2023! </h3>
-					<p class="lead mt-2"> A free trial? enrolling? or re-enrolling? It's all in one place now.  
-					<a href="https://forms.office.com/r/nZStieTVzW" target="_blank">Register Now.</a></p>
-					<a target="_blank" href="./img/Term_3_Flyer.jpg">
-						<img src="./img/Term_3_Flyer.jpg" alt="Forest" style="width:150px">
+					<h3>Term 3 Holiday Sessions, 2023! </h3>
+					<p class="lead mt-2"> Last week of September. Click to find out more!  
+					<a href="https://forms.office.com/r/5NbZzEHwDB" target="_blank">Register Now.</a></p>
+					<a target="_blank" href="./img/2023.Term_3_Holiday_flyer.png">
+						<img src="./img2023.Term_3_Holiday_flyer.png" alt="Forest" style="width:150px">
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-4">
