added slash to get figure back

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 					<p class="lead mt-2"> Last week of September. Click to find out more!  
 					<a href="https://forms.office.com/r/5NbZzEHwDB" target="_blank">Register Now.</a></p>
 					<a target="_blank" href="./img/2023.Term_3_Holiday_flyer.png">
-						<img src="./img2023.Term_3_Holiday_flyer.png" alt="Forest" style="width:150px">
+						<img src="./img/2023.Term_3_Holiday_flyer.png" alt="Forest" style="width:150px">
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-4">
