--- a/register.html
+++ b/register.html
@@ -87,7 +87,7 @@
 				<div class="col-md-6 mb-3 d-flex align-items-stretch">
 					<div class="card" style="width:100%">
 						<a href="https://forms.office.com/r/5NbZzEHwDB">
-						<img src="img/2023.term3.hols.banner.final.png" style="max-height:300px" class="card-img-top" alt="Term 3 Holidays"></a>
+						<img src="img/2023.term3.hols.banner.cropped.png" style="max-height:300px" class="card-img-top" alt="Term 3 Holidays"></a>
 						<div class="card-body d-flex flex-column">
 							<h2 class="card-title">Term 3 Holiday Sessions</h2>
 							<p class="card-text">Register: click below or find out more --><a href="Timetables.html"
