--- a/register.html
+++ b/register.html
@@ -46,13 +46,13 @@
 			<div class="row">
 					<div class="col-md-6 mb-3 d-flex align-items-stretch">
 					<div class="card" style="width:100%">
-						<a href="https://forms.office.com/r/nZStieTVzW">
-						<img src="img/t32023_wv.png" style="max-height:300px" class="card-img-top" alt="Progressive Training Programs"></a>
+						<a href="https://forms.office.com/r/v86j2ibVkN">
+						<img src="img/2023_term4_enrol_snippet.png" style="max-height:300px" class="card-img-top" alt="Progressive Training Programs"></a>
 						<div class="card-body d-flex flex-column">
-							<h2 class="card-title">2023 School Term 3</h2>
-							<p class="card-text">Free Trial? or Registering? CLICK "Register Now". <a href="SchoolTerms.html"
+							<h2 class="card-title">Term 4, 2023</h2>
+							<p class="card-text">Interested in our Academy-term? CLICK below. <a href="SchoolTerms.html"
 									class="link-secondary">Read more...</a></p>
-							<a href="https://forms.office.com/r/nZStieTVzW"
+							<a href="https://forms.office.com/r/v86j2ibVkN"
 								class="btn btn-info">Register Now</a>
 
 						</div>
@@ -65,8 +65,8 @@
 						<img src="img/games_night.jpg" style="max-height: 300px;" class="card-img-top"
 							alt="Games"></a>
 						<div class="card-body d-flex flex-column">
-							<h2 class="card-title"> 1v1 Games Night</h2>
-							<p class="card-text"> 1 v 1 DUELS!! CLICK "Register Now". <a href="OurPhilosophy.html"
+							<h2 class="card-title"> Term 4, 2023, Games Night</h2>
+							<p class="card-text"> Weekly Games Night's for U7's - U10's. CLICK below. <a href="OurPhilosophy.html"
 									class="link-secondary">Read more...</a></p>
 							<a href="https://forms.office.com/r/FiJYZkRaZu"
 								class="btn btn-info">Register Now</a>
