--- a/register.html
+++ b/register.html
@@ -50,7 +50,7 @@
 						<img src="img/2023_term4_enrol_snippet.png" style="max-height:300px" class="card-img-top" alt="Progressive Training Programs"></a>
 						<div class="card-body d-flex flex-column">
 							<h2 class="card-title">Term 4, 2023</h2>
-							<p class="card-text">Interested in our Academy-term? CLICK below. <a href="SchoolTerms.html"
+							<p class="card-text">Interested in our Academy-term? CLICK below or <a href="SchoolTerms.html"
 									class="link-secondary">Read more...</a></p>
 							<a href="https://forms.office.com/r/v86j2ibVkN"
 								class="btn btn-info">Register Now</a>
@@ -66,7 +66,7 @@
 							alt="Games"></a>
 						<div class="card-body d-flex flex-column">
 							<h2 class="card-title"> Term 4, 2023, Games Night</h2>
-							<p class="card-text"> Weekly Games Night's for U7's - U10's. CLICK below. <a href="OurPhilosophy.html"
+							<p class="card-text"> Weekly Games Night's for U7's - U10's. CLICK below or <a href="OurPhilosophy.html"
 									class="link-secondary">Read more...</a></p>
 							<a href="https://forms.office.com/r/FiJYZkRaZu"
 								class="btn btn-info">Register Now</a>
