--- a/register.html
+++ b/register.html
@@ -49,7 +49,7 @@
 						<a href="https://forms.office.com/r/v86j2ibVkN">
 						<img src="img/2023_term4_enrol_snippet.png" style="max-height:300px" class="card-img-top" alt="Progressive Training Programs"></a>
 						<div class="card-body d-flex flex-column">
-							<h2 class="card-title">Term 4, 2023</h2>
+							<h2 class="card-title" text-align="center">Term 4, 2023</h2>
 							<p class="card-text">Interested in our Academy-term? CLICK below or <a href="SchoolTerms.html"
 									class="link-secondary">Read more...</a></p>
 							<a href="https://forms.office.com/r/v86j2ibVkN"
